# leak_intel

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: db.py  devices_mock.json  main.py
bot/: app.py  manifest.yml
crawler/: README.md
crawler/crawler/: settings.py
crawler/crawler/spiders/: fcc_api_spider.py  fcc_spider.py
docs/openapi/v0/: openapi.yaml
frontend/: next.config.js  package.json  tsconfig.json
frontend/app/: page.tsx
frontend/public/mock/: devices.json
scripts/: load_json.py
supabase/: schema.sql
