[tool.poetry]
name = "leak_intel_backend"
version = "0.0.1"
description = "FastAPI skeleton for Leak Intelligence Platform"
authors = ["LeakIntel Contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
